# mcp-server-malaysia-data

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  claude_desktop_config.example.json  pyproject.toml  quickstart.py
.github/workflows/: ci.yml  contract-check.yml
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/grafana/: dashboards.yml
deploy/grafana/dashboards/: service.json
docs/: architecture.md  runbook.md
docs/adr/: 0001-fastmcp-over-raw-sdk.md  0002-two-tier-cache.md  0003-circuit-breaker.md  0004-no-zakat-advice.md  0005-dual-transport.md  0006-pydantic-v2.md  0007-hexagonal-architecture.md  README.md
examples/: langgraph_agent.py
examples/eval_suite/: dataset.py  runner.py
src/malaysia_data_mcp/: __main__.py
src/malaysia_data_mcp/application/: container.py  prompts.py  tools.py
src/malaysia_data_mcp/domain/: errors.py  models.py
src/malaysia_data_mcp/infrastructure/: cache.py  http.py  observability.py  settings.py
src/malaysia_data_mcp/infrastructure/clients/: bnm.py  datagovmy.py
src/malaysia_data_mcp/presentation/: http_server.py  mcp_server.py
tests/: conftest.py
tests/contract/: test_upstream_contracts.py
tests/integration/: test_live_apis.py
tests/property/: test_models.py
tests/smoke/: test_mcp_protocol.py
tests/unit/: test_tools.py
