# =============================================================================
# pyproject.toml
# =============================================================================
# Why this file exists (interview-defensible reasoning):
#
# 1. Single source of truth for dependencies, build config, and tool config.
#    Replaces requirements.txt + setup.py + setup.cfg + .flake8 + mypy.ini.
#
# 2. Uses uv (Astral) for dependency resolution — 10-100x faster than pip,
#    deterministic locking via uv.lock, drop-in replacement for pip workflow.
#
# 3. Optional dependency groups [dev], [redis], [otel] keep the runtime image
#    slim while letting contributors install full dev tooling with one command.
#
# 4. Every quality tool (ruff, mypy, pytest, coverage) is configured here so a
#    reviewer doesn't have to hunt through dotfiles to understand the standards.
# =============================================================================

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "malaysia-data-mcp"
version = "0.1.0"
description = "Production-grade MCP server giving AI assistants live access to Bank Negara Malaysia and data.gov.my data — with dual MCP + REST transports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aliya Alias", email = "aliyaalias19@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "malaysia", "bnm", "fintech", "llm", "ai-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  # --- MCP framework ---
  # FastMCP is bundled in the official mcp SDK as of 1.x. Decorator-based,
  # auto-generates JSON Schema from type hints. Industry standard since 2025.
  "mcp[cli]>=1.2.0",

  # --- HTTP & async ---
  # httpx > requests for: async support, HTTP/2, connection pooling, modern API.
  "httpx[http2]>=0.27.0",
  # tenacity for retry policies (exponential backoff + jitter). Industry standard.
  "tenacity>=8.2.0",
  # aiolimiter for token-bucket rate limiting against upstream free APIs.
  "aiolimiter>=1.1.0",
  # purgatory for circuit breaker — fails fast when upstream is down.
  "purgatory>=3.0.0",

  # --- Data validation & modeling ---
  # Pydantic v2 for typed models, schema generation, runtime validation.
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",

  # --- Caching ---
  # cachetools for in-memory TTL cache (L1). redis client optional (L2).
  "cachetools>=5.3.0",

  # --- Observability ---
  # structlog for structured (JSON) logging with correlation IDs.
  "structlog>=24.1.0",
  # OpenTelemetry: traces from MCP tool call → HTTP request → cache hit/miss.
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
  "opentelemetry-exporter-otlp-proto-http>=1.24.0",
  # Prometheus metrics endpoint for /metrics scraping.
  "prometheus-client>=0.20.0",

  # --- HTTP server (REST transport + /healthz + /metrics) ---
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
redis = [
  # Optional L2 cache — enabled via env var, falls back to L1-only if absent.
  "redis[hiredis]>=5.0.0",
]
sentry = [
  "sentry-sdk>=2.0.0",
]
agent = [
  # For the LangGraph example agent in examples/.
  "langchain-mcp-adapters>=0.0.5",
  "langgraph>=0.2.0",
  "langchain-anthropic>=0.2.0",
]
dev = [
  # --- Test ---
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "respx>=0.21.0",            # httpx mocking
  "hypothesis>=6.100.0",       # property-based testing
  "freezegun>=1.4.0",          # deterministic datetime in tests

  # --- Lint / format / typecheck ---
  "ruff>=0.4.0",               # 100x faster than flake8+isort+black
  "mypy>=1.10.0",
  "types-cachetools",

  # --- Pre-commit ---
  "pre-commit>=3.7.0",
]

[project.scripts]
# CLI entry points so installers can run `malaysia-data-mcp` directly.
malaysia-data-mcp = "malaysia_data_mcp.presentation.mcp_server:main"
malaysia-data-rest = "malaysia_data_mcp.presentation.http_server:main"

[project.urls]
Homepage = "https://github.com/aliyaalias19/mcp-server-malaysia-data"
Repository = "https://github.com/aliyaalias19/mcp-server-malaysia-data"
Issues = "https://github.com/aliyaalias19/mcp-server-malaysia-data/issues"

# =============================================================================
# Hatchling build config
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/malaysia_data_mcp"]

# =============================================================================
# Ruff — linting + formatting (replaces flake8, isort, pylint, black)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E,W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify, RUF = ruff-specific, ASYNC = async lints, TID = tidy imports
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC", "TID", "PT", "RET"]
ignore = [
  "E501",  # line-too-long handled by formatter
  "B008",  # FastAPI/Pydantic depend on Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy — strict type checking. No `Any` leaks, no untyped defs.
# =============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party libs without stubs — we accept untyped at the boundary only.
module = ["aiolimiter.*", "purgatory.*", "cachetools.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest config
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that hit live BNM/data.gov.my APIs (slow, network)",
  "contract: validates upstream API response shape hasn't drifted",
  "smoke: end-to-end MCP smoke test, requires server running",
]
# Default run: only fast unit + property tests. CI runs more on demand.
addopts = "-m 'not integration and not contract and not smoke' --strict-markers --tb=short"

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src/malaysia_data_mcp"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
